examples/test/testpolicy17822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17822
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key3: value41
      key4: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value47
          key36: value26
          key8: value23
      podSelector:
        matchLabels:
          key22: value17
